--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         </div>
                         <div class="contactDetails">
                             <h3>
-                                hey@charrmello.com
+                                info@charrmello.com
                             </h3>
                         </div>
                     </div>
