--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Charrmello Home</title>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/about.css">
     <link rel="stylesheet" href="/css/fonts/webfontkit_FivoSans_Main/stylesheet_Fivo_Reg.css">
     <link rel="stylesheet" href="/css//fonts/webfontkit-FivoSansModern/stylesheet.css">
 </head>
@@ -29,16 +29,17 @@
         <div class="ContentWrapper">
             <div id="mainContent">
                 <div class="Mainelement">
-                    <div id="mainLogo"></div>
-                </div>
-                <div class="Mainelement">
-                    <h1 id="name">
-                        charrmello
+                    <h1 class="heading">
+                        Let's keep this quick
                     </h1>
-                </div>
-                <div class="elementAbout">
-                    <p id="summary">
-                        Design development, strategy, that kind of stuff.
+                    <p class="about">
+                        Charrmello is a design company started by me, Alex, and Josh.
+                    </p>
+                    <p class="about">
+                        We do marketing, product design, UX/UI, and honestly, probably more. We just love to help people make better, smarter products and services.
+                    </p>
+                    <p class="about">
+                        And clearly we also like to keep things disgusitingly simple. K bye.
                     </p>
                     <p id="email">
                         listenhere@charrmello.com
