--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
     <div class="navWrapper">
         <div class="topnav" id="mainNav">
             <a href="index.html" class="menuItem">Home</a>
-            <a href="#gallery" class="menuItem">Gallery</a>
-            <a href="about.html" class="menuItem">About</a>
-            <a href="#getInTouch" class="active" id="CTA">Lets Talk</a>
+            <a href="about.html" class="menuItem" id="CTA">About</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <img id="burgerMenu" src="assets/icons/Burger_Right_charrmello.png" style="width: 45px;" alt="logo">
             </a>
